# Eric_Ortega_Rodriguez_Mini_Project_8

./: Cargo.toml  Makefile  README.md  main.rs  requirements.txt
.github/workflows/: CI.yml  rust_CI.yml
add/: Cargo.toml
process/src/: lib.rs  main.rs
python_process/: Makefile  main.py  requirements.txt  test_main.py
src/: lib.rs  main.rs
