[package]
name = "eric_ortega_rodriguez_mini_project_8"
version = "0.1.0"
edition = "2021"


[lib]
name = "eric_ortega_rodriguez_mini_project_8"
path = "src/lib.rs"

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
ndarray = "0.15"
rss = "0.4"  # Add the RSS crate for memory measurement
procfs = "0.11" # Add procfs for memory usage
